; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libxslt/extr_templates.c_xsltEvalStaticAttrValueTemplate.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libxslt/extr_templates.c_xsltEvalStaticAttrValueTemplate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_7__ = type { i64 }

@XML_ELEMENT_NODE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @xsltEvalStaticAttrValueTemplate(%struct.TYPE_6__* %0, %struct.TYPE_7__* %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_6__*, align 8
  %8 = alloca %struct.TYPE_7__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %7, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %15 = icmp eq %struct.TYPE_6__* %14, null
  br i1 %15, label %28, label %16

16:                                               ; preds = %5
  %17 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %18 = icmp eq %struct.TYPE_7__* %17, null
  br i1 %18, label %28, label %19

19:                                               ; preds = %16
  %20 = load i32*, i32** %9, align 8
  %21 = icmp eq i32* %20, null
  br i1 %21, label %28, label %22

22:                                               ; preds = %19
  %23 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load i64, i64* @XML_ELEMENT_NODE, align 8
  %27 = icmp ne i64 %25, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %22, %19, %16, %5
  store i32* null, i32** %6, align 8
  br label %56

29:                                               ; preds = %22
  %30 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %31 = load i32*, i32** %9, align 8
  %32 = load i32*, i32** %10, align 8
  %33 = call i32* @xsltGetNsProp(%struct.TYPE_7__* %30, i32* %31, i32* %32)
  store i32* %33, i32** %13, align 8
  %34 = load i32*, i32** %13, align 8
  %35 = icmp eq i32* %34, null
  br i1 %35, label %36, label %38

36:                                               ; preds = %29
  %37 = load i32*, i32** %11, align 8
  store i32 0, i32* %37, align 4
  store i32* null, i32** %6, align 8
  br label %56

38:                                               ; preds = %29
  %39 = load i32*, i32** %11, align 8
  store i32 1, i32* %39, align 4
  %40 = load i32*, i32** %13, align 8
  %41 = call i32* @xmlStrchr(i32* %40, i8 signext 123)
  store i32* %41, i32** %12, align 8
  %42 = load i32*, i32** %12, align 8
  %43 = icmp ne i32* %42, null
  br i1 %43, label %44, label %47

44:                                               ; preds = %38
  %45 = load i32*, i32** %13, align 8
  %46 = call i32 @xmlFree(i32* %45)
  store i32* null, i32** %6, align 8
  br label %56

47:                                               ; preds = %38
  %48 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %49 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 4
  %51 = load i32*, i32** %13, align 8
  %52 = call i32* @xmlDictLookup(i32 %50, i32* %51, i32 -1)
  store i32* %52, i32** %12, align 8
  %53 = load i32*, i32** %13, align 8
  %54 = call i32 @xmlFree(i32* %53)
  %55 = load i32*, i32** %12, align 8
  store i32* %55, i32** %6, align 8
  br label %56

56:                                               ; preds = %47, %44, %36, %28
  %57 = load i32*, i32** %6, align 8
  ret i32* %57
}

declare dso_local i32* @xsltGetNsProp(%struct.TYPE_7__*, i32*, i32*) #1

declare dso_local i32* @xmlStrchr(i32*, i8 signext) #1

declare dso_local i32 @xmlFree(i32*) #1

declare dso_local i32* @xmlDictLookup(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
